교통정보 버튼 단일화

--- a/main.html
+++ b/main.html
@@ -44,8 +44,7 @@
           <br><br><br><br><br><br>
           <div class="btn_box">
             <a class="btn_gps" id="btn-gps">내 위치</a>
-            <a class="btn_gps" id="btn-traffic-on">교통정보 표시</a>
-            <a class="btn_gps" id="btn-traffic-off">교통정보 끄기</a>
+            <a class="btn_gps" id="btn-traffic-on">교통정보 끄기/켜기</a>
             <a class="btn_gps btn-open-popup">도움말</a>
           </div>
         </div>
@@ -53,9 +52,9 @@
         <div class="info_page">
           <p class="info_name">지도에서 마커를 클릭해주세요</p>     
           <p class="info_etc" id="info_address">주소와 상세정보가 나타납니다</p>     
-          <span class="info_etc">영업 시간:</span> <span class="info_etc" id="info_time">&nbsp</span><br>
-          <span class="info_etc">전화 번호:</span> <span class="info_etc" id="info_phone">&nbsp</span><br>
-          <span class="info_etc">종합 별점:</span> <span class="info_etc" id="info_star">&nbsp</span><br>
+          <span class="info_etc">영업 시간:</span><span class="info_etc" id="info_time"></span><br>
+          <span class="info_etc">전화 번호:</span><span class="info_etc" id="info_phone">&nbsp</span><br>
+          <span class="info_etc">종합 별점:</span><span class="info_etc" id="info_star">&nbsp</span><br>
           <a class="btn_gps" id="btn_dirc" style="display: none">길찾기</a>
         </div>
         <iframe class="info_imgbox" src="before_map.html">
