--- a/main.html
+++ b/main.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>구해줘 펫즈</title>
     <link rel="stylesheet" href="css/ui_style.css" />
+    <link rel="stylesheet" href="css/button_style.css"/>
+    <link rel="stylesheet" href="css/info_box_style.css"/>
+    <link rel="stylesheet" href="css/modal_style.css"/>
    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
@@ -56,7 +59,7 @@
           <span class="info_etc">종합 별점:</span><span class="info_etc" id="info_star">&nbsp</span><br>
           <a class="btn_gps" id="btn_dirc" style="display: none">길찾기</a>
         </div>
-        <iframe class="info_imgbox" src="before_map.html">
+        <iframe class="info_mapbox" src="before_map.html">
             <p>iframe을 지원하지 않는 브라우저입니다.</p>
         </iframe> 
     </div>
