--- a/main.html
+++ b/main.html
@@ -42,6 +42,7 @@
         <header>
           <div class="logo"></div>
         </header>
+
         <div class="article_top">
           <br><br><br><br><br><br>
           <div class="btn_box">
@@ -50,16 +51,29 @@
             <a class="btn_gps btn-open-popup">도움말</a>
           </div>
         </div>
+
         <div id="map" class="article_map"></div>
+
         <div class="info_page">
-          <p class="info_name">지도에서 마커를 클릭해주세요</p>     
-          <p class="info_etc" id="info_address">주소와 상세정보가 나타납니다</p>     
-          <span class="info_etc">영업 시간:</span><span class="info_etc" id="info_time"></span><br>
-          <span class="info_etc">전화 번호:</span><span class="info_etc" id="info_phone">&nbsp</span><br>
-          <span class="info_etc">종합 별점:</span><span class="info_etc" id="info_star">&nbsp</span><br>
+          
+          <div>
+            <div class="info_name">지도에서 마커를 클릭해주세요</div> 
+          </div>    
+          <div class="info_text_wrap">
+            <div class="info_etc" id="info_address">주소와 상세정보가 나타납니다</div>
+          </div>     
+          <div class="info_text_wrap">
+            <div class="info_etc">영업 시간:</div><div class="info_etc" id="info_time"></div>
+          </div>
+          <div class="info_text_wrap">
+            <div class="info_etc">전화 번호:</div><div class="info_etc" id="info_phone"></div>
+          </div>
+          <div class="info_text_wrap">
+            <div class="info_etc">종합 별점:</div><div class="info_etc" id="info_star"></div>
+          </div>
           <a class="btn_gps" id="btn_dirc" style="display: none">길찾기</a>
         </div>
-        <iframe class="info_mapbox" src="before_map.html">
+        <iframe class="info_imgbox" src="before_map.html">
             <p>iframe을 지원하지 않는 브라우저입니다.</p>
         </iframe> 
     </div>
